Fixed some issues with alignment in our number pad container. Other then that styled our operator buttons and aligned everything together with flex.

--- a/style.css
+++ b/style.css
@@ -31,14 +31,17 @@ body {
 #buttonContainer {
     display: flex;  
     background-color: red;
+    flex-flow: column wrap;
+    justify-content: center;
     height: 463px;
 }
 #numberpadContainer {
     display: flex;
     flex-wrap: wrap;
-    margin: 80px 0px 0px 10px;
     width: 80%;
-    height: auto;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 .buttonNumPad {
     width: 30%;
@@ -46,6 +49,21 @@ body {
     border: 1px solid black;
     border-radius: 5px;
     background-color: #e0af8e;
+}
+.operatorButton {
+    width: auto;
+    height: 80px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #e0af8e;
+}
+#operatorContainer {
+    display: flex;
+    flex-flow: column wrap;
+    height: 100%;
+    width: 100px;
+    justify-content: space-around;
+    margin-left: -17px;
 }
 
 
